// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserAuthState /> renders correctly when NOT isLoggedIn 1`] = `
<div
  className="user-auth-state"
>
  <button
    className="hot"
    onClick={[Function]}
  >
    Sign in  
    <i
      className="icon icon-enter"
    />
  </button>
</div>
`;

exports[`<UserAuthState /> renders correctly when isLoggedIn 1`] = `
<div
  className="user-auth-state"
>
  <button
    className="primary"
    onClick={[Function]}
  >
    Sign out  
    <i
      className="icon icon-exit"
    />
  </button>
</div>
`;
